docker/staging/backend.rs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
  labels:
    app: feedparser
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
    matchExpressions:
      - { key: tier, operator: In, values: [backend] }
  template:
    metadata:
      labels:
        app: feedparser
        tier: backend
    spec:
      containers:
        - name: mongodb
          image: asia.gcr.io/feedparser-217913/feedparser/mongodb:latest
          resources:
            requests:
              cpu: 512m
              memory: 2048Mi
          ports:
          - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          gcePersistentDisk:
            pdName: mongo-disk
            fsType: ext4
