docker/staging/frontend.rs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: feedparser
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
    matchExpressions:
      - { key: tier, operator: In, values: [frontend] }
  template:
    metadata:
      labels:
        app: feedparser
        tier: frontend
    spec:
      volumes:
        - name: assets
      containers:
      - name: nginx
        image: asia.gcr.io/feedparser-217913/feedparser/nginx:latest
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /app/assets
            name: assets
      - name: node-ssr
        image: asia.gcr.io/feedparser-217913/feedparser/node_ssr:latest
        resources:
          requests:
            cpu: 320m
            memory: 720Mi
        lifecycle:
          postStart:
            exec:
              command:
                - sh
                - -c
                - /app/sonken/docker/staging/install.sh
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /app/assets
            name: assets
      - name: node-api
        image: asia.gcr.io/feedparser-217913/feedparser/node_api:latest
        resources:
          requests:
            cpu: 256m
            memory: 1280Mi
        ports:
          - containerPort: 8082
