docker/staging/job.rs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: job-worker
  labels:
    app: feedparser
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: worker
    matchExpressions:
      - { key: tier, operator: In, values: [worker] }
  template:
    metadata:
      labels:
        app: feedparser
        tier: worker
    spec:
      containers:
      - name: node-job
        image: asia.gcr.io/feedparser-217913/feedparser/node_job:latest
        resources:
          requests:
            cpu: 96m
            memory: 384Mi
