docker/staging/frontend.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: feedparser
  labels:
    app: feedparser
    tier: front
spec:
  backend:
    serviceName: frontend
    servicePort: 80
